--- a/mlClassics-2.ipynb
+++ b/mlClassics-2.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#flower classification using support vector machine(SVM)"
+    "#Support Vector Machine(SVM)"
    ]
   },
   {
