--- a/mlClassics-1.ipynb
+++ b/mlClassics-1.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#k-nearest Neighbors Method(kNN)"
+    "#k-Nearest Neighbors method(kNN)"
    ]
   },
   {
