--- a/mlClassics-2.ipynb
+++ b/mlClassics-2.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "#plitting the dataset into features and labels\n",
+    "#Splitting the dataset into features and labels\n",
     "X=iris.data\n",
     "y=iris.target\n",
     "\n",
